# iw.mlops_template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml  pyproject_template.toml
.github/workflows/: build_train_test.yml  bumpversion.yml  ci.yml  paths_filter_test.yml  push_repository.yml
mlops_utils/: README.md  build_run_docker_gpu.sh  get_best_run.py  logger.py  merge_master.py  parse_readme.py  push_metrics.py  wandb_login.py
sample_main/: TFRunner.py  dataset.py  main.py  model.py  sample.config.json  sample_config.json
